--- a/FIARClient/Search.xaml
+++ b/FIARClient/Search.xaml
@@ -17,7 +17,7 @@
                 <MenuItem Header="all games.." Name="MI_allgames" Click="MI_allgames_Click"/>
                 <MenuItem Header="games currently playing.." Name="MI_currentlyplaying" Click="MI_currentlyplaying_Click" />
                 <MenuItem Header="by 2 players.." Name="MI_2players" Click="MI_2players_Click" />
-                
+
             </MenuItem>
         </Menu>
         <Grid>
@@ -31,8 +31,17 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock Name="tbHeader" Margin="10,10,10,10" Grid.ColumnSpan="2" Text="Search Results" />
+            <DataGrid  Name="dgData" Margin="10,2,10,10" Grid.Row="1" Grid.ColumnSpan="3" AutoGenerateColumns="false" FlowDirection="LeftToRight">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" Binding="{Binding id}" />
+                    <DataGridTextColumn Header="User Name" Binding="{Binding username}" />
+                    <DataGridTextColumn Header="Score" Binding="{Binding Score}" />
+                    <DataGridTextColumn Header="Wins" Binding="{Binding Wins}" />
+                    <DataGridTextColumn Header="Loses" Binding="{Binding Loses}" />
+                    <DataGridTextColumn Header="Total Games" Binding="{Binding Games}" />
+                </DataGrid.Columns>
+            </DataGrid>
 
-            <ListBox  Name="lbItems" Margin="10,2,10,10" Grid.Row="1" Grid.ColumnSpan="3"/>
 
         </Grid>
     </DockPanel>
