--- a/FIARClient/WaitingRoom.xaml
+++ b/FIARClient/WaitingRoom.xaml
@@ -12,6 +12,8 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Players list" Name="MI_userName"  Click="btn_search_Click"/>
             <MenuItem Header="by 2 players.." Name="MI_2players" Click="MI_2players_Click" />
+            <MenuItem Header="games ended.." Name="MI_gamesEnded" Click="MI_gamesEnded_Click"  />
+            <MenuItem Header="ongoing games.." Name="MI_gamesOngoing"  Click="MI_gamesOngoing_Click" />
         </Menu>
         <Grid Margin="0,10,0,3">
             <Grid.ColumnDefinitions>
