--- a/FIARClient/WaitingRoom.xaml
+++ b/FIARClient/WaitingRoom.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FIARClient"
         mc:Ignorable="d"
-        Title="Four In A Row" Height="323.75" Width="500" ResizeMode="NoResize" Closing="Window_Closing" >
+        Title="Four In A Row" Height="323.75" Width="500" ResizeMode="NoResize" Closing="Window_Closing" ContentRendered="Window_ContentRendered" >
 
 
     <DockPanel>
